<resources>
    <string name="app_name">Classmate</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="matt">Matt</string>
    <string name="steven">Steven</string>
    <string name="cole">Cole</string>
    <string name="connor">Connor</string>
    <string name="mosa">Mosa</string>
    <string name="nelson">Nelson</string>
    <string name="rayan">Rayan</string>
    <string name="thomas">Thomas</string>
    <string name="wenxi">Wenxi</string>

    <string name="set_listener">Please set your on click listener</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

<!--Question by Teacher Interface Strings -->
    <string name="default_teacher_question_description">Ask your question, then send an alert to
        your students by pressing send.</string>
    <string name="btn_teacher_send">Send</string>
    <string name="btn_teacher_collect">Collect</string>

<!--Question Response Interface Strings -->
    <string name="default_simple_question_description">Your teacher has read a question and its
        choices aloud. Mark your response to their question below and press send.</string>
    <string name="option_a">A</string>
    <string name="option_b">B</string>
    <string name="option_c">C</string>
    <string name="option_d">D</string>
    <string name="btn_send">Send</string>
    <string name="response_sent">You selected option %s. Your response is being sent to the teacher now.</string>

<!-- Sign up/Dedicated Interface/User info Strings-->
    <string name="signup">SIGN UP</string>
    <string name="name">Name </string>
    <string name="student_id">Student ID </string>
    <string name="student">Student</string>
    <string name="roll">Roll Call</string>
    <string name="attendance">Attendance Records</string>
    <string name="response">In Class Response</string>
    <string name="responseres">Response Results</string>
    <string name="classmanage">Class Management</string>
    <string name="user_enrollment">Enrollment</string>
    <string name="pass">Password </string>
    <string name="confirm_pass">Confirm Password </string>
    <string name="email">E-mail </string>
    <string name="user">USER INFO</string>
    <string name="user_btn">User Info</string>
    <string name="user_info_name">NAME </string>
    <string name="user_info_email">EMAIL </string>
    <string name="user_info_id">STUDENT ID </string>
    <string name="user_info_cpw">CURRENT PASSWORD </string>
    <string name="user_info_npw">NEW PASSWORD </string>
    <string name="user_info_cnpw">CONFIRM NEW PASSWORD </string>
    <string name="change_pw">Change Password</string>
    <string name="cancel_pw">Cancel</string>
    <string name="reset_pw_text">Enter your e-mail and we\'ll send you a link to reset your password.</string>
    <string name="reset_pw_btn">Send Reset Link</string>
    <string name="login_btn">LOGIN</string>
    <string name="state_lbl">State</string>
    <string name="school_lbl">School</string>
    <string name="ui_school_lbl">SCHOOLS</string>
    <string name="add_class_btn">ADD SCHOOL</string>

<!--Roll Call UI Strings-->
    <string name="btn_roll_call_start">Start Class</string>
    <string name="btn_roll_call_stop">Stop Class</string>
    <string name="lbl_rc_teacher">Teacher:</string>
    <string name="lbl_rc_class">Class:</string>
    <string name="lbl_rc_connected">Connected Students</string>


    <!--Student Roll Call UI Strings-->
    <string name="btn_check_in">Check in</string>
    <string name="lbl_status_checked_in">You have checked-in</string>
    <string name="lbl_status_not_connected">No class found</string>
    <string name="lbl_status_checking_in">Checking in...</string>
    <string name="lbl_status_failed">Check-in failed. Please try again</string>
    <string name="action_debug">Debug</string>
    <string name="btn_teacher_call_time">Call Time</string>
    <string name="answers_returned_text">Answers Recieved:</string>

    <string-array name="attendance_list">
        <item>3</item>
        <item>4</item>
        <item>13</item>
        <item>5</item>
        <item>9</item>
    </string-array>
    <string-array name="missing_list">
        <item>2</item>
        <item>1</item>
        <item>7</item>
        <item>2</item>
        <item>1</item>
    </string-array>


    <!--String Resources for Teacher Attendance and Class Management Modules-->
    <string name="class_add">Add Class</string>
    <string name="classname">Class Name</string>
    <string name="schoolname">School Name Abbreviation</string>
    <string name="statename">State Name</string>
    <string-array name="semester_array">
        <item>Select Semester...</item>
        <item>Fall</item>
        <item>Spring</item>
        <item>Summer</item>
    </string-array>
    <string-array name="year_array">
        <item>Select Year...</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>
    <string name="addclass">Add Class</string>
    <string name="teachattend">Attendance</string>
</resources>
