<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uco.schambers.classmate.Fragments.StudentInterface">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roll"
            android:id="@+id/stu_roll_btn"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stu_attendance_btn"
            android:layout_gravity="center_horizontal"
            android:text="@string/attendance" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response"
            android:id="@+id/stu_response_btn"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_enrollment"
            android:id="@+id/user_enroll"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_btn"
            android:id="@+id/user_info_btn"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</FrameLayout>