<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uco.schambers.classmate.Fragments.TeacherInterface">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roll"
            android:id="@+id/teach_roll_btn"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/classmanage"
            android:id="@+id/teach_manage_btn"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response"
            android:id="@+id/teach_response_btn"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/responseres"
            android:id="@+id/teach_results_btn"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</FrameLayout>