<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uco.schambers.classmate.Fragments.TeacherRollCall">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_rc_teacher"/>
            <TextView android:id="@+id/txt_rc_teacher"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="Test"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_rc_class"/>
            <EditText android:id="@+id/txt_rc_class"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:lines="1"/>
        </LinearLayout>

        <Button android:id="@+id/btn_start_roll_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_roll_call_start"
            />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_rc_connected"/>
        <ListView android:id="@+id/list_connected"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:drawSelectorOnTop="false"
            />
    </LinearLayout>
</FrameLayout>
