<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="edu.uco.schambers.classmate.Fragments.TeacherClassManagement"
    android:clickable="true"
    android:nestedScrollingEnabled="true"
    >

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/class_add"
            android:id="@+id/class_add_lbl"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/classname_et"
            android:hint="@string/classname"
            android:layout_gravity="center_horizontal" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/state_sp"
            android:hint="@string/statename"
            android:layout_gravity="center_horizontal"
            android:entries="@array/states_list"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/schoolname_sp"
            android:hint="@string/schoolname"
            android:layout_gravity="center_horizontal"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/semester_sp"
            android:layout_gravity="center_horizontal"
            android:entries="@array/semester_array"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/year_sp"
            android:layout_gravity="center_horizontal"
            android:entries="@array/year_array"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addclass"
            android:id="@+id/add_class_btn"
            android:layout_gravity="center_horizontal" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=" Name"
                android:id="@+id/textView4"
                android:layout_weight="2"
                android:background="@drawable/cell_shape"
                android:textColor="@android:color/black"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" School"
                android:id="@+id/textView7"
                android:layout_weight="0.1"
                android:background="@drawable/cell_shape"
                android:textColor="@android:color/black"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Semester/Year"
                android:id="@+id/textView5"
                android:layout_weight="0.3"
                android:background="@drawable/cell_shape"
                android:textColor="@android:color/black"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textStyle="bold" />

        </TableRow>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:background="#d8dcdc">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/classMgmtTable">

            </TableLayout>
        </ScrollView>

    </LinearLayout>


</FrameLayout>